--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -1,4 +1,4 @@
-@import 'base';
+@import "base";
 
 /* Grid Header */
 
@@ -117,7 +117,7 @@
         line-height: 1rem;
         a {
           font-size: 14px;
-          color: #4D4D4E;
+          color: #4d4d4e;
           padding: 7px 15px;
           i.material-icons {
             position: static;
