--- a/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
@@ -5,7 +5,8 @@ No built-in (selected, editable, highlight, flashing, invalid, loading, :focus) 
 classes should alter those!
 */
 
-.slick-headerrow.ui-state-default, .slick-footerrow.ui-state-default  {
+.slick-headerrow.ui-state-default,
+.slick-footerrow.ui-state-default {
   width: 100%;
   overflow: hidden;
   border-left: 0px !important;
@@ -17,7 +18,8 @@ classes should alter those!
   border-left: 0px !important;
 }
 
-.slick-headerrow-columns, .slick-footerrow-columns {
+.slick-headerrow-columns,
+.slick-footerrow-columns {
   position: relative;
   white-space: nowrap;
   cursor: default;
@@ -49,7 +51,8 @@ classes should alter those!
   float: left;
 }
 
-.slick-headerrow-column.ui-state-default, .slick-footerrow-column.ui-state-default {
+.slick-headerrow-column.ui-state-default,
+.slick-footerrow-column.ui-state-default {
   padding: 4px;
 }
 
@@ -94,13 +97,16 @@ classes should alter those!
   outline: 0;
 }
 
-.slick-row.ui-widget-content, .slick-row.ui-state-active {
+.slick-row.ui-widget-content,
+.slick-row.ui-state-active {
   position: absolute;
   border: 0px;
   width: 100%;
 }
 
-.slick-cell, .slick-headerrow-column , .slick-footerrow-column{
+.slick-cell,
+.slick-headerrow-column,
+.slick-footerrow-column {
   position: absolute;
   border: 1px solid transparent;
   border-right: 1px solid silver;
@@ -119,7 +125,8 @@ classes should alter those!
     width: 100%;
   }
 }
-.slick-cell, .slick-headerrow-column{
+.slick-cell,
+.slick-headerrow-column {
   border-bottom-color: silver;
 }
 .slick-footerrow-column {
