--- a/app/assets/stylesheets/lib/materialnote/variables.scss
+++ b/app/assets/stylesheets/lib/materialnote/variables.scss
@@ -7,7 +7,7 @@ $toolbar-btn-color: #fff !default;
 $toolbar-color-lighten: #dee0e2 !default;
 
 // scrollbars
-$scrollbar-color: color('grey', 'lighten-2') !default;
+$scrollbar-color: color("grey", "lighten-2") !default;
 $scrollbar-background-color: #ffffff !default;
 $scrollbar-highlight-color: #535353 !default;
 
@@ -24,7 +24,7 @@ $error-color: #c62828 !default;
 $error-text-color: #eeeeee !default;
 $success-color: #2e7d32 !default;
 $success-text-color: #eeeeee !default;
-$action-color: #2196F3 !default;
+$action-color: #2196f3 !default;
 $action-text-color: #eeeeee !default;
 $action-color2: #ffc107 !default;
 $action-text-color-2: #212121 !default;
