--- a/app/assets/stylesheets/context_menu.scss
+++ b/app/assets/stylesheets/context_menu.scss
@@ -1,9 +1,9 @@
-@import 'base';
+@import "base";
 
 #contextMenu {
   position: absolute;
   width: 204px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16), 0px 2px 5px rgba(0, 0, 0, 0.26);
 
   z-index: 99999;
@@ -22,7 +22,7 @@
 
   display: flex;
   align-items: flex-end;
-  color: #4D4D4E;
+  color: #4d4d4e;
   cursor: pointer;
 
   i.material-icons {
