--- a/app/assets/stylesheets/grid.cell.scss
+++ b/app/assets/stylesheets/grid.cell.scss
@@ -1,4 +1,4 @@
-@import 'base';
+@import "base";
 
 /* Grid Cell */
 
@@ -40,10 +40,12 @@
   &.odd {
     background: $grid-row-odd-bg-color;
     .slick-cell.loading {
-      background: linear-gradient(to right,
-                                  $grid-cell-odd-shimmer-color-1 8%,
-                                  $grid-cell-odd-shimmer-color-2 18%,
-                                  $grid-cell-odd-shimmer-color-1 33%);
+      background: linear-gradient(
+        to right,
+        $grid-cell-odd-shimmer-color-1 8%,
+        $grid-cell-odd-shimmer-color-2 18%,
+        $grid-cell-odd-shimmer-color-1 33%
+      );
     }
     .slick-cell.filtered {
       background: $grid-cell-odd-filtered-bg-color;
@@ -54,10 +56,12 @@
   }
   &.even {
     .slick-cell.loading {
-      background: linear-gradient(to right,
-                                  $grid-cell-even-shimmer-color-1 8%,
-                                  $grid-cell-even-shimmer-color-2 18%,
-                                  $grid-cell-even-shimmer-color-1 33%);
+      background: linear-gradient(
+        to right,
+        $grid-cell-even-shimmer-color-1 8%,
+        $grid-cell-even-shimmer-color-2 18%,
+        $grid-cell-even-shimmer-color-1 33%
+      );
     }
     .slick-cell.filtered {
       background: $grid-cell-even-filtered-bg-color;
