--- a/app/assets/stylesheets/lib/flatpickr_material_blue.scss
+++ b/app/assets/stylesheets/lib/flatpickr_material_blue.scss
@@ -15,7 +15,7 @@
   position: absolute;
   width: 315px;
   box-sizing: border-box;
-  box-shadow: 0 3px 13px rgba(0,0,0,0.08);
+  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.08);
 }
 .flatpickr-calendar.open,
 .flatpickr-calendar.inline {
@@ -64,7 +64,7 @@
   display: block;
   pointer-events: none;
   border: solid transparent;
-  content: '';
+  content: "";
   height: 0;
   width: 0;
   left: 22px;
@@ -132,14 +132,14 @@
 }
 .flatpickr-prev-month.flatpickr-prev-month,
 .flatpickr-next-month.flatpickr-prev-month {
-/*
+  /*
         /*rtl:begin:ignore*/
-/*
+  /*
         */
   left: calc(3.57% - 1.5px);
-/*
+  /*
         /*rtl:end:ignore*/
-/*
+  /*
         */
 }
 /*
@@ -148,14 +148,14 @@
         /*rtl:end:ignore*/
 .flatpickr-prev-month.flatpickr-next-month,
 .flatpickr-next-month.flatpickr-next-month {
-/*
+  /*
         /*rtl:begin:ignore*/
-/*
+  /*
         */
   right: calc(3.57% - 1.5px);
-/*
+  /*
         /*rtl:end:ignore*/
-/*
+  /*
         */
 }
 /*
@@ -199,14 +199,14 @@
   line-height: 50%;
   opacity: 0;
   cursor: pointer;
-  border: 1px solid rgba(72,72,72,0.05);
+  border: 1px solid rgba(72, 72, 72, 0.05);
   box-sizing: border-box;
 }
 .numInputWrapper span:hover {
-  background: rgba(0,0,0,0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 .numInputWrapper span:active {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 .numInputWrapper span:after {
   display: block;
@@ -221,7 +221,7 @@
 .numInputWrapper span.arrowUp:after {
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  border-bottom: 4px solid rgba(72,72,72,0.6);
+  border-bottom: 4px solid rgba(72, 72, 72, 0.6);
 }
 .numInputWrapper span.arrowDown {
   top: 50%;
@@ -229,17 +229,17 @@
 .numInputWrapper span.arrowDown:after {
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  border-top: 4px solid rgba(72,72,72,0.6);
+  border-top: 4px solid rgba(72, 72, 72, 0.6);
 }
 .numInputWrapper span svg {
   width: inherit;
   height: auto;
 }
 .numInputWrapper span svg path {
-  fill: rgba(255,255,255,0.5);
+  fill: rgba(255, 255, 255, 0.5);
 }
 .numInputWrapper:hover {
-  background: rgba(0,0,0,0.05);
+  background: rgba(0, 0, 0, 0.05);
 }
 .numInputWrapper:hover span {
   opacity: 1;
@@ -265,7 +265,7 @@
   padding: 0;
 }
 .flatpickr-current-month span.cur-month:hover {
-  background: rgba(0,0,0,0.05);
+  background: rgba(0, 0, 0, 0.05);
 }
 .flatpickr-current-month .numInputWrapper {
   width: 6ch;
@@ -301,7 +301,7 @@
 .flatpickr-current-month input.cur-year[disabled],
 .flatpickr-current-month input.cur-year[disabled]:hover {
   font-size: 100%;
-  color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
   background: transparent;
   pointer-events: none;
 }
@@ -424,7 +424,7 @@
 .flatpickr-day.notAllowed,
 .flatpickr-day.notAllowed.prevMonthDay,
 .flatpickr-day.notAllowed.nextMonthDay {
-  color: rgba(72,72,72,0.3);
+  color: rgba(72, 72, 72, 0.3);
   background: transparent;
   border-color: transparent;
   cursor: default;
@@ -432,7 +432,7 @@
 span.flatpickr-weekday {
   cursor: default;
   font-size: 90%;
-  color: rgba(0,0,0,0.54);
+  color: rgba(0, 0, 0, 0.54);
   height: 27.333333333333332px;
   line-height: 24px;
   margin: 0;
