--- a/app/assets/stylesheets/lib/lazyjsonviewer.scss
+++ b/app/assets/stylesheets/lib/lazyjsonviewer.scss
@@ -1,116 +1,115 @@
 .lazy-json-viewer {
-    font-family: Consolas, 'Lucida Console', monospace;
-    font-size: 12px;
-    white-space: pre-wrap;
+  font-family: Consolas, "Lucida Console", monospace;
+  font-size: 12px;
+  white-space: pre-wrap;
 }
 
 .lazy-json-viewer .value-summary,
 .lazy-json-viewer .collapsed > div > .content {
-    display: none;
+  display: none;
 }
 
 .lazy-json-viewer .collapsed > div > .value-summary {
-    display: inline-block;
+  display: inline-block;
 }
 
 .lazy-json-viewer .collapsed > .multiline {
-    max-height: 2ex;
-    overflow: hidden;
-    display: inline-block;
-    position: relative;
-    padding-right: 3em;
-    margin-left: 0;
+  max-height: 2ex;
+  overflow: hidden;
+  display: inline-block;
+  position: relative;
+  padding-right: 3em;
+  margin-left: 0;
 }
 
 .lazy-json-viewer .collapsed > .multiline::after {
-    content: "...`";
-    position: absolute;
-    top: 0;
-    right: 0;
+  content: "...`";
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
-
 .lazy-json-viewer .property-name {
-    float: left;
-    clear: left;
-    margin-right: 8px;
-    position: relative;
-    z-index: 1;
+  float: left;
+  clear: left;
+  margin-right: 8px;
+  position: relative;
+  z-index: 1;
 }
 
 .lazy-json-viewer .array-value,
 .lazy-json-viewer .object-value {
-    position: relative;
+  position: relative;
 }
 
 .lazy-json-viewer .array-value > ::before {
-    content: "[";
+  content: "[";
 }
 
 .lazy-json-viewer .array-value > ::after {
-    content: "]";
+  content: "]";
 }
 
 .lazy-json-viewer .object-value > ::before {
-    content: "{";
+  content: "{";
 }
 
 .lazy-json-viewer .object-value > ::after {
-    content: "}";
+  content: "}";
 }
 
 .lazy-json-viewer .string-value::before,
 .lazy-json-viewer .string-value::after {
-    content: '"';
+  content: '"';
 }
 
 .lazy-json-viewer .containsQuote::before,
 .lazy-json-viewer .containsQuote::after,
 .lazy-json-viewer .multiline::before,
 .lazy-json-viewer .multiline::after {
-    content: "`";
+  content: "`";
 }
 
 .lazy-json-viewer .property {
-    overflow: hidden;
-    position: relative;
-    padding-left: 2em;
+  overflow: hidden;
+  position: relative;
+  padding-left: 2em;
 }
 
 .lazy-json-viewer .json-expander {
 }
 
 .lazy-json-viewer .json-expander::before {
-    content: "-";
-    position: absolute;
-    left: -10px;
-    top: 0;
+  content: "-";
+  position: absolute;
+  left: -10px;
+  top: 0;
 }
 
 .lazy-json-viewer .collapsed > .json-expander::before {
-    content: "+";
+  content: "+";
 }
 
 .lazy-json-viewer .content {
-    padding-left: 0em;
+  padding-left: 0em;
 }
 
 .lazy-json-viewer .string-value {
-    color: #a31515;
+  color: #a31515;
 }
 
 .lazy-json-viewer .number-value {
-    color: #0000ff;
+  color: #0000ff;
 }
 
 .lazy-json-viewer .null-value {
-    color: #aaa;
+  color: #aaa;
 }
 
 .lazy-json-viewer .boolean-value {
-    color: #ae00b5;
+  color: #ae00b5;
 }
 
 .lazy-json-viewer .multiline {
-    margin-left: 16px;
+  margin-left: 16px;
 }
