--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -1,4 +1,4 @@
-@import 'base';
+@import "base";
 
 #navigation {
   position: absolute;
@@ -8,7 +8,7 @@
   width: $menu-width;
   font-size: $font-size-small;
   border-right: 1px solid $border-color;
-  background: color('grey', 'lighten-5');
+  background: color("grey", "lighten-5");
   display: flex;
   flex-direction: column;
 
@@ -20,7 +20,7 @@
       margin-bottom: $menu-padding;
       // Menu groups
       li.submenu {
-        margin-bottom:20px;
+        margin-bottom: 20px;
         a {
           font-size: 13px;
           padding-left: 24px;
@@ -38,13 +38,13 @@
               top: 6px;
               font-size: 21px;
               transition: color 0.4s ease;
-              color: color('grey', 'darken-2');
+              color: color("grey", "darken-2");
             }
 
             a {
               width: 100%;
               text-transform: none;
-              color: color('grey', 'darken-4');
+              color: color("grey", "darken-4");
               align-items: center;
               padding-left: 24px;
               padding-top: 4px;
@@ -58,7 +58,7 @@
             }
 
             a:hover {
-              background: color('grey', 'lighten-3');
+              background: color("grey", "lighten-3");
               .material-icons {
                 color: black;
               }
