--- a/app/assets/stylesheets/overrides/chosen.overrides.scss
+++ b/app/assets/stylesheets/overrides/chosen.overrides.scss
@@ -1,6 +1,8 @@
-@import 'base';
+@import "base";
 
-select.chosen, select.chzn-select, select.chosen-select {
+select.chosen,
+select.chzn-select,
+select.chosen-select {
   display: block;
 }
 
@@ -49,7 +51,9 @@ select.chosen, select.chzn-select, select.chosen-select {
   background: $main-color;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi), only screen and (min-resolution: 1.5dppx) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+  only screen and (min-resolution: 144dpi),
+  only screen and (min-resolution: 1.5dppx) {
   .chosen-rtl .chosen-search input[type="text"],
   .chosen-container-single .chosen-single abbr,
   .chosen-container-single .chosen-single div b,
