--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -1,4 +1,4 @@
-@import 'base';
+@import "base";
 
 // Nav
 
@@ -21,7 +21,10 @@ nav {
   nav.nav-extended .nav-wrapper {
     min-height: 50px;
   }
-  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+  nav,
+  nav .nav-wrapper i,
+  nav a.button-collapse,
+  nav a.button-collapse i {
     height: 47px;
     line-height: 50px;
   }
@@ -102,7 +105,6 @@ nav {
   }
 }
 
-
 // Progress Bar
 
 .progress {
@@ -115,17 +117,17 @@ nav {
 // Form: Input Field
 
 input:not([type]),
-input[type=text],
-input[type=password],
-input[type=email],
-input[type=url],
-input[type=time],
-input[type=date],
-input[type=datetime],
-input[type=datetime-local],
-input[type=tel],
-input[type=number],
-input[type=search],
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+input[type="time"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="tel"],
+input[type="number"],
+input[type="search"],
 textarea.materialize-textarea {
   // Focused input style
   &:focus:not([readonly]) {
@@ -133,7 +135,7 @@ textarea.materialize-textarea {
     box-shadow: 0 1px 0 0 $main-color !important;
   }
   // Focused label style
-  &:focus:not([readonly])+label {
+  &:focus:not([readonly]) + label {
     color: $main-color !important;
   }
 }
@@ -162,5 +164,5 @@ textarea.materialize-textarea {
   -webkit-tap-highlight-color: transparent;
   vertical-align: middle;
   z-index: 1;
-  transition: .3s ease-out;
+  transition: 0.3s ease-out;
 }
