--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -125,7 +125,8 @@
                 .checkboxMargin
                   %label
                     = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: 'filled-in', "data-target-id" => "#{column_name}_target_flag"
-                    %span #{column_name}
+                    - span = "#{column_name.to_s.gsub("_"," ").capitalize()}"
+                    %span #{span}
               - elsif column.options[:editor]=='RichTextEditor'
                 .input-field.input-outlined
                   %label{:for => "#{model_name}_#{column_name}"}= label
