--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -175,12 +175,9 @@
     .submit
       %a.btn-flat.waves-effect.modal-close CANCEL
       - if is_new
-        %input.btn-flat{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue ", :class=> "waves-effect color-blue"}/
-        %input.btn{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create ", :class=> "waves-effect"}/
+        %input.btn-flat.waves-effect.color-blue{id: "#{grid.name}_submit_continue", name: "commit", type: "submit", value: " Create and Continue "}
+        %input.btn.waves-effect{id: "#{grid.name}_submit", name: "commit", type: "submit", value: " Create "}
       - else
-        %input.btn{id: "#{grid.name}_batch_#{name}", class: "#{name}_btn", name: "commit", type: "submit", value: "  #{button_name}  ", :class=> "waves-effect"}/
+        %input.btn.waves-effect{id: "#{grid.name}_batch_#{name}", class: "#{name}_btn", name: "commit", type: "submit", value: " #{button_name} "}
 :javascript
-   if ($('#modal-footer').children().length == 0) {
-    $('.submit').appendTo($('#modal-footer'))
-  }
   $('.input-outlined').first().children("input").focus()
