Add fix footer and header only for the create modal

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -135,6 +135,8 @@ form {
 .modal-fixed-footer {
   .modal-footer {
     z-index: 1200;
+  }
+  .submit {
     .color-blue {
       color: #2196f3;
     }
