overwrite materialize dropdown css for cursor pointing

--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -44,6 +44,7 @@
         font-size: $font-size-middle;
         display: inline-block;
         padding-right: 2px;
+        cursor: pointer;
         i {
           font-size: $font-size-large;
           margin-right: 8px;
