BUG https://gitlab.ekohe.com/ekohe/wulin/wulin_master/-/issues/184 - Fixed displayErrorMessage keeps its title

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -34,6 +34,14 @@
     $('#confirm-modal').modal({
       onCloseEnd: function(modal, trigger) {
         $('#confirm-content').text('Are you sure to do this ?');
+        $('#confirm-modal .modal-title').text('Confirmation');
+      }
+    });
+
+    $('#error-modal').modal({
+      onCloseEnd: function(modal, trigger) {
+        $('#error-content').text('Something happened.');
+        $('#error-modal .modal-title').text('Confirmation');
       }
     });
   });
