MISC #199 - Make dropdown overflow outside of the popup

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -111,6 +111,9 @@ form {
     display: block;
     border-radius: 4px;
     transition: box-shadow, border-color 0.15s;
+    .chosen-drop {
+      z-index: 9999;
+    }
   }
   > input,
   textarea {
@@ -128,10 +131,15 @@ form {
 }
 
 .modal-fixed-footer {
+  overflow: visible !important;
   .modal-footer {
     z-index: 1200;
     .color-blue {
       color: #2196f3;
     }
+  }
+
+  .modal-content {
+    overflow-y: inherit !important;
   }
 }
