--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -146,6 +146,7 @@ textarea.materialize-textarea {
   height: 100% !important;
   padding: 0;
   margin: 0;
+  min-height: 4.5rem;
 }
 
 // Form: Check Box
