--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -29,6 +29,18 @@
     margin-left: -2px;
     width: 102%;
   }
+
+  .chosen-container .chosen-drop {
+    top: 25px;
+    left: -3px;
+
+    .chosen-results {
+      white-space: normal;
+      li {
+        font-size: 13px;
+      }
+    }
+  }
   // select
   .chzn-container {
     &.chzn-container-multi {
@@ -44,6 +56,7 @@
     .chzn-drop {
       margin-right: 4px;
       margin-left: -2px;
+      margin-top: 10px;
     }
     .chzn-choices {
       margin-bottom: -5px;
