--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -41,7 +41,7 @@
     $('#error-modal').modal({
       onCloseEnd: function(modal, trigger) {
         $('#error-content').text('Something happened.');
-        $('#error-modal .modal-title').text('Confirmation');
+        $('#error-modal .modal-title').text('Error');
       }
     });
   });
