dropdown attach to id instead of class

--- a/app/views/action_partials/toolbar/_select.html.haml
+++ b/app/views/action_partials/toolbar/_select.html.haml
@@ -6,7 +6,7 @@
         = link_to 'javascript:void(0);', item.anchor_tag_options do
           %i.material-icons= item.icon.presence || 'help'
     %li.toolbar_item.more_vert{style:'display: none;'}
-      = link_to 'javascript:void(0);', class: 'waves-effect waves-circle dropdown-trigger', 'data-target' => "more_vert_#{current_grid}", 'data-alignment' => 'right' do
+      = link_to 'javascript:void(0);', class: 'waves-effect waves-circle dropdown-trigger', id: "#{current_grid}", 'data-target' => "more_vert_#{current_grid}", 'data-alignment' => 'right' do
         %i.material-icons more_vert
     %ul.dropdown-content.collection{:id => "more_vert_#{current_grid}"}
       - toolbar_items.each do |item|
@@ -19,7 +19,7 @@
 :javascript
   if ("#{current_grid.nil?}" !== 'true') {
     $(function(){
-      $('.dropdown-trigger').dropdown({alignment: 'right'});
+      $("##{current_grid}").dropdown({alignment: 'right'});
       $("[data-type='more_vert_item']").off('click').on('click', function(e) {
         $("#" + $(e.target).data('id')).click()
       })
