--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -181,9 +181,9 @@
         %input.btn.waves-effect{id: "#{grid.name}_batch_#{name}", class: "#{name}_btn", name: "commit", type: "submit", value: " #{button_name} "}
 :javascript
   $('.input-outlined').first().children("input").focus()
-  $('form label').on('click', (evt) => {
+  $('##{grid.name}_form label').on('click', (evt) => {
     setTimeout(() => {
       let id = $(evt.target).closest('.input-outlined').find('.chzn-select').attr('id')
-          $("form" + " " + "#" + id).trigger("chosen:open")
+          $("##{grid.name}_form" + " " + "#" + id).trigger("chosen:open")
       },100)
     })
