--- a/app/assets/stylesheets/lib/materialnote/overrides.scss
+++ b/app/assets/stylesheets/lib/materialnote/overrides.scss
@@ -36,6 +36,10 @@
   overflow: hidden;
 }
 
+.dropdown-content {
+  position: static;
+}
+
 .note-editor .modal .modal-footer {
   background-color: white;
 }
