--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -27,6 +27,7 @@
     margin-top: -8px;
     margin-left: -2px;
     width: 102%;
+    position: static;
   }
 
   .chosen-container-single .chosen-drop {
