--- a/app/assets/stylesheets/lib/SlickGrid/slick.pager.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.pager.scss
@@ -4,7 +4,7 @@
   padding-left: 6px;
   border: 1px solid gray;
   border-top: 0;
-  background: url("../images/header-columns-bg.gif") repeat-x center bottom;
+  background: image-url("header-columns-bg.gif") repeat-x center bottom;
   vertical-align: middle;
 }
 
