provide position static only for slick-cell chosen-container-multi chosen drop

--- a/app/assets/stylesheets/overrides/chosen.overrides.scss
+++ b/app/assets/stylesheets/overrides/chosen.overrides.scss
@@ -64,3 +64,9 @@ select.chosen-select {
     background-image: image-url("chosen-sprite@2x.png") !important;
   }
 }
+
+.slick-cell {
+  .chosen-container-multi .chosen-drop {
+  position: static;
+  }
+}
