MISC ekohe/hbs/terra_nova#97 - Make pager-item extra text right

--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import 'base';
 
 /* Grid Container */
 
@@ -68,6 +68,9 @@
       .slick-pager-status.with-filter {
         color: $filter-color;
       }
+    }
+    .pager-item.extra {
+      text-align: right;
     }
   }
 }
