MISC #207 - Modify slick-cell span style make it no effect on flatpickr

--- a/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
@@ -112,7 +112,7 @@ classes should alter those!
   margin: 0;
   white-space: nowrap;
   cursor: pointer;
-  span {
+  span:not([class]) {
     display: inline-block;
     width: 100%;
   }
