MISC #207 - Make flatpickr-input display block

--- a/app/assets/stylesheets/lib/flatpickr_material_blue.scss
+++ b/app/assets/stylesheets/lib/flatpickr_material_blue.scss
@@ -585,6 +585,9 @@ span.flatpickr-weekday {
 .flatpickr-input[readonly] {
   cursor: pointer;
 }
+.editor-text.flatpickr-input {
+  display: block;
+}
 @-moz-keyframes flatpickrFadeInDown {
   from {
     opacity: 0;
