MISC #207 - Set flatpickr input to 20px to make the dropdown closer to the input

--- a/app/assets/stylesheets/lib/flatpickr_material_blue.scss
+++ b/app/assets/stylesheets/lib/flatpickr_material_blue.scss
@@ -587,6 +587,7 @@ span.flatpickr-weekday {
 }
 .editor-text.flatpickr-input {
   display: block;
+  height: 20px !important;
 }
 @-moz-keyframes flatpickrFadeInDown {
   from {
