--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -117,7 +117,7 @@ nav {
 // Form: Input Field
 
 input:not([type]),
-input[type="text"],
+input[type="text"]:not(.chosen-search-input), // https://gitlab.ekohe.com/ekohe/wulin/wulin_master/-/issues/205
 input[type="password"],
 input[type="email"],
 input[type="url"],
@@ -169,4 +169,11 @@ textarea.materialize-textarea {
 
 .dropdown-content li {
   cursor: auto;
+}
+
+// https://gitlab.ekohe.com/ekohe/wulin/wulin_master/-/issues/205
+.chosen-container-multi {
+  ul.chosen-choices {
+    height: 24px;
+  }
 }
