--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -179,3 +179,29 @@
         %input.btn.waves-effect{id: "#{grid.name}_submit", name: "commit", type: "submit", value: " Create "}
       - else
         %input.btn.waves-effect{id: "#{grid.name}_batch_#{name}", class: "#{name}_btn", name: "commit", type: "submit", value: " #{button_name} "}
+
+:javascript
+  $('.input-outlined').first().children("input").focus()
+
+  $(".chzn-select").on("chosen:showing_dropdown", (evt, params) => {
+    let jqTarget = $(evt.currentTarget)
+    let modal = jqTarget.closest(".modal")
+
+    modal.find(".submit").hide()
+    modal.find(".modal-content").css({"overflow-y": "visible"})
+
+    modal.css({"overflow-y": "visible"})
+    jqTarget.closest(".field-line").find(".chosen-drop").css({"z-index": 100000, "display": "block"})
+  })
+
+
+  $(".chzn-select").on("chosen:hiding_dropdown", (evt, params) => {
+    let jqTarget = $(evt.currentTarget)
+    let modal = jqTarget.closest(".modal")
+
+    modal.find(".submit").show()
+    modal.css({"overflow-y": "auto"})
+    modal.find(".modal-content").css({"overflow-y": "auto"})
+
+    jqTarget.closest(".field-line").find(".chosen-drop").css({"z-index": 1010, "display": "none"})
+  })
