Feature #199 - reduce the height of the cursor and also fixed the issue that come from @sarah

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -51,7 +51,7 @@ form {
         color: $text-color;
         font-size: $font-size-small-middle;
       }
-      input[type="text"]:not(.browser-default):not(.numInput) {
+      input[type="text"]:not(.browser-default):not(.numInput):not(.chosen-search-input) {
         height: 36px;
       }
       input[data-date="true"]:not(.numInput),
