--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -196,6 +196,8 @@
 
 
   $(".chzn-select").on("chosen:hiding_dropdown", (evt, params) => {
+    if ($(".chosen-container-active").length > 0) return;
+
     let jqTarget = $(evt.currentTarget)
     let modal = jqTarget.closest(".modal")
 
