Allow grid to be scrollable

--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -11,6 +11,7 @@
     .slick-viewport {
       .grid-canvas {
         border-top: 1px solid $border-color;
+        overflow-y: auto;
       }
     }
   }
